--- a/certificateservice/src/index.css
+++ b/certificateservice/src/index.css
@@ -1,11 +1,20 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} */
+/* Full page background color */
+body {
+  background: linear-gradient(135deg, #6a11cb, #2575fc);
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
+
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
